@@ -1,5 +1,7 @@
 Changelog for mk-parallel-dump:
 
+   * CREATE TRIGGER defs were wrongly included in chunk files (issue 223).
+
 2008-12-01: version 1.0.11
 
    * Updates to shared code.
